# sigmasirius-bot

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  temp.py
.run/: add_application_form_statuses.run.xml  add_roles.run.xml  application_form_consumer.run.xml  bot_polling.run.xml  give_user_admin_role.run.xml  migrate.run.xml  registration_consumer.run.xml  start_consumer.run.xml  uvicorn.run.xml
alembic/: env.py
alembic/versions/: 0001_create_schema_and_seed_rooms.py  0002_add_production_triggers.py  0003_add_test_triggers.py  77d16ce68149_initial_database.py
config/: .env.db  .env.example  .env.saved  logging.conf.yml  settings.py
consumer/: __main__.py  app.py  logger.py
consumers/: mappers.py
consumers/add_application_form_consumer/: __main__.py  app.py  logger.py
consumers/application_form_consumer/: __main__.py  app.py  logger.py  mappers.py  web_app.py
consumers/consumer/: __main__.py  app.py
consumers/mappers/: user_mapper.py
consumers/model/: __init__.py  application_form.py  models.py  role.py  user.py
consumers/registration_consumer/: __main__.py  app.py  mappers.py  web_app.py
consumers/repairman_consumer/: __main__.py  app.py  logger.py  mappers.py  web_app.py
consumers/reservation_consumer/: __main__.py  app.py  logger.py  mappers.py  metrics.py  web_app.py
consumers/start_consumer/: __main__.py  app.py  logger.py  mappers.py  web_app.py
consumers/stats_consumer/: app.py  logger.py
prometheus/: prometheus_config.yml
scripts/: add_admins.py  add_application_form_statuses.py  add_roles.py  add_rooms.py  give_admin_role_to_user.py  give_user_admin_role.py  migrate.py  startup.sh
scripts/add_admins/: __main__.py  add_admins.py
scripts/add_roles/: __main__.py  add_roles.py
scripts/add_test_data/: add_test_reservations.py
sql/triggers/: reservation_test_triggers.sql  reservation_triggers.sql
src/: app.py  bg_tasks.py  bot.py  commands.py  logger.py  metrics.py
src/auth/: validator.py
src/files_storage/: base.py  storage_client.py
src/keyboard_buttons/: qr.py  registration.py  reservation.py  texts.py  utils.py
src/messages/: add_application_form.py  registration.py  repairman.py  (+2 more)
(+204 files in other folders)
